@@ -33,7 +33,6 @@ HTML_FILES = index.html							\
 	     exmpp_client_sasl.html					\
 	     exmpp_client_session.html					\
 	     exmpp_client_tls.html					\
-	     exmpp_error.html						\
 	     exmpp_internals.html					\
 	     exmpp_iq.html						\
 	     exmpp_jid.html						\
@@ -46,6 +45,7 @@ HTML_FILES = index.html							\
 	     exmpp_server_tls.html					\
 	     exmpp_session.html						\
 	     exmpp_ssl.html						\
+	     exmpp_stanza.html						\
 	     exmpp_stream.html						\
 	     exmpp_stringprep.html					\
 	     exmpp_sup.html						\
