@@ -10,8 +10,8 @@
 		'@srcdir@/core/exmpp_stringprep',
 		'@srcdir@/core/exmpp_jid',
 		'@srcdir@/core/exmpp_jlib',
+		'@srcdir@/core/exmpp_stanza',
 		'@srcdir@/core/exmpp_stream',
-		'@srcdir@/core/exmpp_error',
 		'@srcdir@/core/exmpp_iq',
 		'@srcdir@/network/exmpp_callbacks',
 		'@srcdir@/network/exmpp_session',
